--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
 
 
 
-<form action="/game/new" method="POST">
+<form action="/games/new" method="POST">
 <label>Player 1</label>
 <input type="text" name="player1" placeholder="Player 1">
 <br />
